2008-05-21  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/wireless-security.c
		- (ws_802_1x_auth_combo_init): fix counting of active item in the
			auth popup menu (rh #447716)

2008-05-15  Tambet Ingo  <tambet@gmail.com>

	Update GConf connections after all the changes are done to avoid
	invalid connection states while in between changes.

	* src/gconf-helpers/nma-gconf-settings.c (connections_changed_cb):
	Collect all pending changes and handle them after all GConf changes
	are done. Also fixes a bunch of ugly warnings when connections get
	deleted.

	* src/gconf-helpers/nma-gconf-connection.c
	(nma_gconf_connection_changed): Remove the GConfEntry, we collect all
	changes before calling this, the connection is in invalid state while
	some setting values are update and others aren't.
	(delete): Suggest a sync after recursive unset.

2008-05-15  Tambet Ingo  <tambet@gmail.com>

	Move crypto functions from here to NetworkManager/libnm-util.

	* src/utils/crypto.[ch]
	* src/utils/crypto_gnutls.c
	* src/utils/crypto_nss.c
	* src/utils/test-crypto.c: Move to NetworkManager/libnm-util.

2008-05-12  Dan Williams  <dcbw@redhat.com>

	* configure.ac
		- Handle PolicyKit 0.6 and grab PK version for later use
		- Split out PK CFLAGS and LIBS from main NMA flags and libs

	* src/connection-editor/Makefile.am
		- Use split out PK CFLAGS and LIBS
		- Build in PK 0.6 helpers when needed

	* src/connection-editor/polkit-06-helpers.c
	  src/connection-editor/polkit-06-helpers.h
		- (polkit_gnome_auth_obtain): re-implement for PK 0.6 using ShowDialog
			instead

	* src/connection-editor/nm-connection-list.c
		- Use polkit-06-helpers when needed

2008-05-12  Tambet Ingo  <tambet@gmail.com>

	* src/connection-editor/nm-connection-list.c: Unify all the PolicyKit
	access to one place. Implement connection scope changing.

	* src/connection-editor/nm-connection-editor.c: Remove all the PolicyKit
	code from here.

2008-05-09  Tambet Ingo  <tambet@gmail.com>
