@@ -61,7 +61,8 @@
 	      <property name="visible">True</property>
 	      <property name="items" translatable="yes">DHCP
 Auto IP
-Manual</property>
+Manual
+DHCP with manual DNS settings</property>
 	      <property name="add_tearoffs">False</property>
 	      <property name="focus_on_click">True</property>
 	    </widget>
